fix text alignment

--- a/styles/components-css/Navbar.module.css
+++ b/styles/components-css/Navbar.module.css
@@ -133,6 +133,7 @@
         color: var(--white);
         font-family: 'Poppins', sans-serif;
         font-size: 1.8em;
+        text-align: center;
     }
     .center_wrapper{
         width: 100%;
